<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:background="@drawable/hangman_background"
    tools:context=".MainScreen">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView android:text="@string/welcome_Screen_Msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp" android:textStyle="italic" android:textColor="#000000"/>
    </LinearLayout>

    <TextView android:text="@string/ws_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="22sp"  android:textStyle="italic" android:textColor="#000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Play_Game"
        android:textSize="20sp" android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="gotoConnectionScreen"/>

</RelativeLayout>
